[package]
name = "connect4win"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
