[package]
name = "connect4win"
version = "0.1.0"
edition = "2021"

authors = ["Fabio Murer <murer.fabio23@gmail.com>"]
description = "A connect-four engine"
repository = "https://github.com/zwirgioIlredelCodice/connect4win"

license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
bincode = "1.3"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
